--- a/package.json
+++ b/package.json
@@ -6,20 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "check-traits": "node scripts/check-traits.js"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^1.1.2",
+    "@farcaster/miniapp-sdk": "^0.2.1",
+    "@farcaster/miniapp-wagmi-connector": "^1.1.0",
+    "@openzeppelin/contracts": "^5.4.0",
+    "@tanstack/react-query": "^5.90.10",
+    "axios": "^1.13.2",
+    "ethers": "^6.15.0",
+    "framer-motion": "^12.23.24",
+    "html-to-image": "^1.11.13",
+    "jose": "^6.1.2",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "viem": "^2.39.3",
+    "wagmi": "^2.19.5"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "hardhat": "^3.0.15",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
